--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 			<artifactId>junit5</artifactId>
 			<version>4.1.6</version>
 		</dependency>
+		<dependency>
+			<groupId>au.com.dius</groupId>
+			<artifactId>pact-jvm-consumer-java8</artifactId>
+			<version>4.0.10</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
